# ureinuz

./: README.md  pyproject.toml
src/taktiny/: __init__.py
src/taktiny/cosettes/: _autoencoder.py  _base.py
src/taktiny/cosettes/autoencoder/: __init__.py  flux2_kl.py
src/taktiny/cosettes/transformer/: __init__.py  _common.py  flux.py  gemma.py  llama.py  qwen.py
src/taktiny/layers/: __init__.py  attention.py  conv.py  ffn.py  norm.py  posemb.py  recurrent.py  resnet.py
src/taktiny/maestro/: _config.py  _livret.py  _prelude.py
src/taktiny/maestro/opus/: __init__.py  gemma.py  llama.py  qwen.py
src/taktiny/nn/: __init__.py  block.py  conv.py  embedding.py  linear.py  lora.py  module.py  norm.py  rng.py
src/taktiny/schedulers/: __init__.py
src/taktiny/schedulers/euler/: flow_match_discrete.py
src/taktiny/trainer/: __init__.py  config.py  trainer.py
src/taktiny/trainer/optimizers/: __init__.py
src/taktiny/utils/: quantization.py  sharding.py  spmd.py  typing.py  weights.py
src/ureinuz/: __init__.py
src/ureinuz/_composer/: __init__.py  maestro.py
src/ureinuz/configs/: __init__.py  _base.py  cnn.py  mmdit.py  transformer.py  utils.py
src/ureinuz/layers/: __init__.py  attention.py  ffn.py  norm.py  posemb.py  resnet.py
src/ureinuz/models/: _base.py  autoencoder.py  convnext.py  unet.py
src/ureinuz/nn/: __init__.py  block.py  conv.py  embedding.py  layer.py  linear.py  lora.py  module.py  norm.py  rng.py
src/ureinuz/trainer/: __init__.py  config.py  trainer.py
src/ureinuz/utils/: quantization.py  sharding.py  spmd.py  typing.py  weights.py
(+22 files in other folders)
