[project]
name = "taktiny"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aqtp>=0.9.0",
    "huggingface-hub>=1.22.0",
    "jax>=0.10.2",
    "safetensors>=0.8.0",
    "transformers>=5.13.0",
]

[dependency-groups]
dev = [
    "equinox>=0.13.8",
    "flax>=0.12.7",
    "optax>=0.2.8",
    "torchvision>=0.27.1",
]